--- a/src/makefile.linux-mingw
+++ b/src/makefile.linux-mingw
@@ -89,7 +89,7 @@ OBJS= \
     obj/scrypt-x86.o \
     obj/scrypt-x86_64.o
 
-all: infinitecoinv2d.exe
+all: Colossuscoind.exe
 
 obj/build.h: FORCE
 	/bin/sh ../share/genbuild.sh obj/build.h
@@ -99,7 +99,7 @@ DEFS += -DHAVE_BUILD_INFO
 obj/%.o: %.cpp $(HEADERS)
 	i586-mingw32msvc-g++ -c $(CFLAGS) -o $@ $<
 
-infinitecoinv2d.exe: $(OBJS:obj/%=obj/%)
+Colossuscoind.exe: $(OBJS:obj/%=obj/%)
 	i586-mingw32msvc-g++ $(CFLAGS) $(LDFLAGS) -o $@ $(LIBPATHS) $^ $(LIBS)
 
 TESTOBJS := $(patsubst test/%.cpp,obj-test/%.o,$(wildcard test/*.cpp))
@@ -118,7 +118,7 @@ obj/scrypt-x86_64.o: scrypt-x86_64.S
 
 clean:
 	-rm -f obj/*.o
-	-rm -f infinitecoinv2d.exe
+	-rm -f Colossuscoind.exe
 	-rm -f obj-test/*.o
 	-rm -f test_infinitecoinv2.exe
 	-rm -f obj/build.h
