Removed Remaining InfiniteV2 References

--- a/src/makefile.linux-mingw
+++ b/src/makefile.linux-mingw
@@ -107,7 +107,7 @@ TESTOBJS := $(patsubst test/%.cpp,obj-test/%.o,$(wildcard test/*.cpp))
 obj-test/%.o: test/%.cpp $(HEADERS)
 	i586-mingw32msvc-g++ -c $(TESTDEFS) $(CFLAGS) -o $@ $<
 
-test_infinitecoinv2.exe: $(TESTOBJS) $(filter-out obj/init.o,$(OBJS:obj/%=obj/%))
+test_colossuscoin.exe: $(TESTOBJS) $(filter-out obj/init.o,$(OBJS:obj/%=obj/%))
 	i586-mingw32msvc-g++ $(CFLAGS) $(LDFLAGS) -o $@ $(LIBPATHS) $^ -lboost_unit_test_framework-mt-s $(LIBS)
 
 obj/scrypt-x86.o: scrypt-x86.S
@@ -120,7 +120,7 @@ clean:
 	-rm -f obj/*.o
 	-rm -f Colossuscoind.exe
 	-rm -f obj-test/*.o
-	-rm -f test_infinitecoinv2.exe
+	-rm -f test_colossuscoin.exe
 	-rm -f obj/build.h
 
 FORCE:
